--- a/async-requests/poll/task.html
+++ b/async-requests/poll/task.html
@@ -23,11 +23,11 @@
     </header>
     <main class="content">
       <div class="card">
-        <div class="poll">
-          <div class="poll__title" id="poll__title">
+        <!-- <div class="poll">
+          <div class="poll__title" id="poll__title"> -->
             <!--   Как вы относитесь к собакам? -->
-          </div>
-          <div class="poll__answers poll__answers_active" id="poll__answers">
+          <!-- </div>
+          <div class="poll__answers poll__answers_active" id="poll__answers"> -->
             <!-- <button class="poll__answer">
               Хорошо
             </button>
@@ -40,8 +40,8 @@
             <button class="poll__answer">
               Кто тут?
             </button> -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
       </div>
     </main>
     <script src="task.js"></script>
